--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,6 @@
         </div>
       </div>
     </div>
-    <%= js add_gritter(flash[:notice], title: "Overtime Application Notification", sticky: false) %>
+    <%= render 'shared/alerts' %>
   </body>
 </html>
