--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,23 @@
-<%= @post.inspect %>
+<div>
+  <h2><%= @post.rationale %></h2>
+</div>
+
+<div class="well">
+  <div>
+    <h3>Overtime Amount Requested:<span><%= @post.overtime_request %></span></h3>
+  </div>
+
+  <div>
+    <h3>Employee:<span><%= @post.user.full_name %></span></h3>
+  </div>
+
+  <div>
+    <h3>Date:<span><%= @post.date %></span></h3>
+  </div>
+
+  <div>
+    <h3>Current Stage of Approval:<span><%= @post.status %></span></h3>
+  </div>
+</div>
+
+<%= link_to 'Edit', edit_post_path(@post), class: "btn btn-primary" if policy(@post).update? %>
