--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,7 +12,7 @@
     </li>
 
     <!--TODO: possibly refactor-->
-    <% render 'shared/audit_log_tab' if policy(AuditLog).index? %>
+    <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
 
     <li class="<%= active?(new_post_path) %>">
       <%= link_to "Add New Entry", new_post_path, id: 'new_post_from_nav' %>
