--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,1 +1,20 @@
-<h1>Hi Admin</h1>
+<div class="container-fluid">
+  <div class="pending-homepage row">
+    <div class="homepage-block col-md-3">
+      <p>hack</p>
+    </div>
+    <div class="homepage-block col-md-3">
+      <p>hack</p>
+    </div>
+    <div class="homepage-block col-md-3">
+      <p>hack</p>
+    </div>
+    <div class="homepage-block col-md-3">
+      <p>hack</p>
+    </div>
+  </div>
+</div>
+
+<div class="pending-homepage">
+  <p>Hasdas</p>
+</div>
