--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,17 +1,8 @@
 <div class="container-fluid">
   <div class="pending-homepage row">
-    <div class="homepage-block col-md-3">
-      <p>hack</p>
-    </div>
-    <div class="homepage-block col-md-3">
-      <p>hack</p>
-    </div>
-    <div class="homepage-block col-md-3">
-      <p>hack</p>
-    </div>
-    <div class="homepage-block col-md-3">
-      <p>hack</p>
-    </div>
+    <h2>Items Pending Your Approval</h2>
+    <hr>
+    <%= render partial: 'pending_approval', locals: { pending_approvals: @pending_approvals } %>
   </div>
 </div>
 
