--- a/app/assets/stylesheets/admin_homepage.css
+++ b/app/assets/stylesheets/admin_homepage.css
@@ -17,6 +17,10 @@
     border-radius: 3px;
 }
 
+.homepage-block:hover {
+    background-color: #172b83;
+}
+
 .pending-details {
     font-weight: 900;
 }
